tests/baselines/reference/topLevelAwaitErrors.11.errors.txt
index.ts(3,8): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== index.ts (1 errors) ====
    // await disallowed in import=
    declare var require: any;
    import await = require("./other");
           ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    
==== other.ts (0 errors) ====
    declare const _await: any;
    export { _await as await };
    